feat(queryapi): introduce Neo4j Query API support
TODO description